# EncodeTalker

./: .gitignore  CHECK_INSTALLED_DEPENDENCIES.sh  CLAUDE.md  CONTRIBUTING.md  CROSS_COMPILE.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  INSTALL_DEPENDENCIES.sh  LICENSE  MIGRATION_CUSTOM_PATHS.md  Makefile  QUICKSTART.md  README.md  build-windows.sh
.cargo/: config.toml
config/: config.toml  custom-paths-example.toml  default.toml
crates/encodetalker-common/: Cargo.toml
crates/encodetalker-common/src/: command_preview.rs  lib.rs
crates/encodetalker-common/src/config/: binary_source.rs  mod.rs  paths.rs  paths_config.rs
crates/encodetalker-common/src/ipc/: listener.rs  mod.rs  stream.rs
crates/encodetalker-common/src/protocol/: messages.rs
crates/encodetalker-common/src/types/: job.rs  mod.rs  stats.rs  status.rs
crates/encodetalker-daemon/: Cargo.toml
crates/encodetalker-daemon/src/: deps_tracker.rs  lib.rs  main.rs
crates/encodetalker-daemon/src/config/: settings.rs
crates/encodetalker-daemon/src/encoder/: ffmpeg.rs  mod.rs  parser.rs  pipeline.rs
crates/encodetalker-daemon/src/ipc/: server.rs
crates/encodetalker-daemon/src/queue/: manager.rs  mod.rs  persist.rs
crates/encodetalker-daemon/tests/: integration_tests.rs
crates/encodetalker-deps/: Cargo.toml
crates/encodetalker-deps/src/: detector.rs  downloader.rs  lib.rs  manager.rs
crates/encodetalker-deps/src/builder/: aom.rs  ffmpeg.rs  mkvtoolnix.rs  mod.rs  precompiled.rs  svt_av1.rs
crates/encodetalker-tui/: Cargo.toml
crates/encodetalker-tui/src/: lib.rs  main.rs
crates/encodetalker-tui/src/app/: state.rs
crates/encodetalker-tui/src/input/: handler.rs
crates/encodetalker-tui/src/ipc/: client.rs
crates/encodetalker-tui/src/ui/: dialog.rs  file_browser.rs  loading_view.rs  mod.rs  queue_view.rs  render.rs  stats_view.rs  vmaf_graph.rs
crates/encodetalker-tui/tests/: e2e.rs
scripts/: CHECK_INSTALLED_DEPENDENCIES.sh  INSTALL_DEPENDENCIES.sh
tests/: test_custom_paths.sh
