[workspace]
members = [
    "crates/encodetalker-common",
    "crates/encodetalker-daemon",
    "crates/encodetalker-tui",
    "crates/encodetalker-deps",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["EncodeTalker Team"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# IPC
tokio-serde = { version = "0.9", features = ["bincode"] }
bincode = "1.3"

# TUI
ratatui = "0.26"
crossterm = "0.27"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utils
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
walkdir = "2.4"
dirs = "5.0"
reqwest = { version = "0.11", features = ["stream"] }

# Internal crates
encodetalker-common = { path = "crates/encodetalker-common" }
encodetalker-deps = { path = "crates/encodetalker-deps" }
