[package]
name = "encodetalker-daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "encodetalker-daemon"
path = "src/main.rs"

[dependencies]
encodetalker-common = { workspace = true }
encodetalker-deps = { workspace = true }

tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-serde = { workspace = true }
bincode = { workspace = true }
futures = "0.3"

serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }

uuid = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
once_cell = "1.19"
