[package]
name = "encodetalker-deps"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
encodetalker-common = { workspace = true }

tokio = { workspace = true }
reqwest = { workspace = true }
async-trait = "0.1"

anyhow = { workspace = true }
thiserror = { workspace = true }

tracing = { workspace = true }
