[package]
name = "encodetalker-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "encodetalker-tui"
path = "src/main.rs"

[dependencies]
encodetalker-common = { workspace = true }
encodetalker-daemon = { workspace = true }

tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-serde = { workspace = true }
bincode = { workspace = true }

ratatui = { workspace = true }
crossterm = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }

uuid = { workspace = true }
chrono = { workspace = true }
walkdir = { workspace = true }
futures = "0.3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
